k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-system
  labels:
    name: payment-system
